fix image picker overflow

--- a/client/src/app/static/components/image-cropper/image-cropper.component.scss-theme.scss
+++ b/client/src/app/static/components/image-cropper/image-cropper.component.scss-theme.scss
@@ -15,6 +15,29 @@
       border-radius: 50%;
       padding: 2px;
     }
+
+    .cropper-upload {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    .cropper-tool-bar {
+      display: flex;
+      align-items: center;
+      padding-top: .2rem;
+    }
+
+    .cropper {
+      max-width: 180px;
+      height: 180px;
+      border-radius: 4px;
+      margin: auto;
+    }
+
+    .crop-result {
+      border-radius: 50%;
+    }
   }
 
 }
